--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,21 +3,32 @@
 @custom-variant dark (&:where(.my-app-dark, .my-app-dark *));
 
 @theme {
-    --color-background: rgb(255, 255, 255);
+    --color-background: rgb(237, 237, 237);
     --color-foreground: rgb(23, 23, 23);
     --color-test: rgba(8, 8, 8, 0.8);
-
 }
 
-    html {
-  --background: rgb(255, 255, 255);
-  --foreground: rgb(23, 23, 23);
-}
+html {
+    --background: rgb(237, 237, 237);
+    --foreground: rgb(23, 23, 23);
 
-    html.my-app-dark {
-        --color-background: rgb(10, 10, 10);
-        --color-foreground: rgb(237, 237, 237);
+    & .test{
+        &::before {
+            opacity: 0.7;
+        }
     }
+}
+
+html.my-app-dark {
+    --color-background: rgb(10, 10, 10);
+    --color-foreground: rgb(237, 237, 237);
+
+    & .test{
+        &::before {
+            opacity: 0.1 !important;
+        }
+    }
+}
 
 /* @media (prefers-color-scheme: dark) {
   :root {
@@ -31,7 +42,7 @@
 body {
     color: var(--color-foreground);
     background: var(--color-background);
-     font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     @apply transition-colors;
 }
 .mask-outer {
@@ -67,4 +78,34 @@ body {
         background-image: url("data:image/svg+xml;utf8, <svg xmlns='http://www.w3.org/2000/svg'  width='100%' height='100%'> <filter id='noiseFilter'><feTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='4' stitchTiles='stitch'/></filter><rect width='100%' height='100%' filter='url(%23noiseFilter)'/></svg>");
         opacity: 0.1; /* adjust as needed */
     }
+}
+@keyframes circular {
+    from {
+        transform: rotate(0deg) translateX(100%) rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg) translateX(100%) rotate(-360deg);
+    }
+}
+.circular {
+    animation: circular 4s linear infinite;
+}
+.spinning-bullet {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    & span {
+        width: 1px;
+        height: 1px;
+    }
+}
+.spinning-bullet-box {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
