--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "./styles//shared-classes.css";
 
 :root {
   --background: #ffffff;
@@ -24,14 +25,69 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   position: relative;
-  &::before {
-    content: "";
+}
+.noise {
+  position: absolute;
+  inset: 0;
+  top: -100%;
+  z-index: -1;
+  width: 100%;
+  height: 200%;
+  background-image: url("data:image/svg+xml;utf8, <svg xmlns='http://www.w3.org/2000/svg'  width='100%' height='100%'> <filter id='noiseFilter'><feTurbulence type='fractalNoise' baseFrequency='0.4' numOctaves='8' stitchTiles='stitch'/></filter><rect width='100%' height='100%' filter='url(%23noiseFilter)'/></svg>");
+  opacity: 0.1;
+  animation: moveDown 10s linear infinite;
+  /* &::after {
     position: absolute;
-    inset: 0;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
     background-image: url("data:image/svg+xml;utf8, <svg xmlns='http://www.w3.org/2000/svg'  width='100%' height='100%'> <filter id='noiseFilter'><feTurbulence type='fractalNoise' baseFrequency='0.4' numOctaves='8' stitchTiles='stitch'/></filter><rect width='100%' height='100%' filter='url(%23noiseFilter)'/></svg>");
-    opacity: 0.05; 
+    animation: moveDown 5s linear infinite;
+    content: "";
+    top: -100%;
+    opacity: 0.5;
+    left: 0;
+    width: 100%;
+    height: 200%;
+  } */
+}
+.falling-particles {
+  background-image: url("/assets/particles.png");
+  background-size: 200vw 100vh;
+  background-repeat: repeat;
+  position: absolute;
+  top: -100vh;
+  left: -50vw;
+  width: 200vw;
+  height: 200vh;
+  z-index:-1;
+  opacity: 0.1;
+  animation: spinParticles 20s linear both infinite;
+}
+
+@keyframes spinParticles {
+  0%,
+  100% {
+    filter: grayscale(1) contrast(0.5) brightness(1.5) blur(10px);
+    /* scale: 0.6; */
+  }
+
+  0% {
+    transform: translateY(0%);
+  }
+
+  50% {
+    /* scale: 1; */
+    filter: grayscale(1) contrast(1) brightness(1) blur(0px);
+  }
+
+  100% {
+    transform: translateY(50%);
+  }
+}
+
+@keyframes moveDown {
+  0% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(50%);
   }
 }
